[package]
name = "rusty_cache"
version = "0.1.0"
authors = ["Vijay Soni <vs4vijay@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
clap = { version = "3.0", features = ["derive"] }
actions-rs = { version = "0.1.0" }

[lib]
name = "rusty_cache"
path = "src/lib.rs"

[[bin]]
name = "rusty_cache"
path = "src/main.rs"
